# pyencrypt

./: README.md  pyencrypt.py  pyproject.toml
src/: pyencrypt.py  requirements.txt
