[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyencrypt"
version = "1.0"
description = "simple encrypter :)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests", 
]

[project.scripts]
pyencrypt = "src.pyencrypt:main"

[tool.setuptools]
packages = ["src"]
